# simple-task-broker

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
consumer/: Dockerfile  main.py  pyproject.toml
producer/: Dockerfile  main.py  pyproject.toml
