[tool.poetry]
name = "producer"
version = "0.1.0"
description = ""
authors = ["mark47B <windachae47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aio-pika = "^9.4.1"
asyncio = "^3.4.3"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
